Adicionado Modal - Add aluno / Index remasterizada p/bootstrap 4.3.1 - listando dados Thymeleaf na tabela (A index serà os dashboards)

--- a/src/main/resources/templates/Home/Index.html
+++ b/src/main/resources/templates/Home/Index.html
@@ -5,12 +5,18 @@
     <head>
         <title>Todos alunos</title>
         <meta charset="utf-8"/>
+        <link rel="stylesheet" href="/css/style_listar.css" type="text/css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"/>
+        <link rel="stylesheet" href="css/Bootstrap/bootstrap.css" type="text/css"/>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <!-- validador de CPF -->
+        <script type="text/javascript" src="js/jquery-1.2.6.pack.js"></script>
+        <script type="text/javascript" src="js/jquery.maskedinput-1.1.4.pack.js"></script>
     </head>
-         <body>   
-        <nav class="navbar sticky-top  navbar-expand-md navbar-dark bg-primary">
+    <body>   
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <a class="navbar-brand" href="lista_alunos.html">
                     <img class="rounded" height="60px" src="https://logopond.com/logos/0343ba08a5fd3ca2a92cbd23932a1b14.png"/>
@@ -33,8 +39,8 @@
                 </div>
             </div>
         </nav>
-       <div class="container">
-       <br/>
+        <div class="container">
+            <br/>
             <div class="" id="alunos">
                 <h2>Alunos</h2>
                 <ul class="nav nav-tabs" role="tablist">
@@ -44,72 +50,107 @@
                     <li class="nav-item">
                         <a class="nav-link pb-3" data-toggle="tab" href="#alunos-sem-avaliacao" role="tab">Sem avaliação</a>
                     </li>
-                    <form class="form-inline  ml-auto">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Nome do aluno" aria-label="Search"/>
-                        <button class="btn btn-outline-success" type="submit">Buscar</button>
-                    </form>
+                    <li class="nav-item"  style="margin-left:49vh;margin-right: 1vh">
+                        <button data-toggle="modal" data-target="#myModal" type="button" class="btn btn-success" style="min-width:10vh"><i class="fa fa-plus" aria-hidden="true"></i> Novo aluno</button>
+                    </li>
+                    <li>
+                        <form class="form-inline  ml-auto">
+                            <input class="form-control mr-sm-m2" type="search" placeholder="Nome do aluno" aria-label="Search" style="margin-right: 1vh;"/>
+                            <button class="btn btn-outline-success" type="submit">Buscar</button>
+                        </form>
+                    </li>
                 </ul>
+                <!-- MODAL INSERIR ALUNO ############################## -->
+                <div class="modal fade" id="myModal">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+
+                            <!-- Modal Header -->
+                            <div class="modal-header">
+                                <h4 class="modal-title">Cadastrar novo aluno</h4>
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            </div>
+
+                            <!-- Modal body -->
+                            <div class="modal-body table-responsive">
+                                <!--<p  align="center" class="modal-p__color modal-p__size">Para cadastrar um novo aluno na academia, por favor, preencha
+                                    os campos abaixo e clique em Adicionar.</p> -->
+                                <table class="table-hover">
+                                    <tr>
+                                        <td class="modal-table-td__width">
+                                            Nome do aluno
+                                        </td>
+                                        <td class="modal-table-td-input__width">
+                                            <input type="text" class="form-control modal-input__size modal-placeholder-size" name="nome" placeholder="Digite o nome do aluno.."/>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="modal-table-td__width">
+                                            CPF do aluno
+                                        </td>
+                                        <td class="modal-table-td-input__width">
+                                            <input type="text" onchange="validaCPF(this.cpf)" class="form-control modal-input__size modal-placeholder-size" name="cpf" id="cpf" placeholder="Digite o CPF do aluno.."/>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="modal-table-td__width">
+                                            Idade aluno
+                                        </td>
+                                        <td class="modal-table-td-input__width">
+                                            <input type="date" class="form-control modal-input__size modal-placeholder-size" name="nome"  min="1920-01-01" max="2019-01-01" value="1985-01-01" placeholder="Digite o nome do aluno.."/>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="modal-table-td__width">
+                                            Plano
+                                        </td>
+                                        <td class="modal-table-td-input__width">
+                                            <select class="form-control modal-input__size modal-placeholder-size" name="plano">
+                                                <option value="basico">Básico (R$60,00 - Musculação)</option>
+                                                <option value="pro">Pró    (R$80,00 - Musculação + 2 Op)</option>
+                                                <option value="pro">Premium    (R$140,00 - Tudo)</option>
+                                            </select>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="modal-table-td__width">
+                                            Mensalidade
+                                        </td>
+                                        <td class="modal-table-td-input__width">
+                                            <select class="form-control modal-input__size modal-placeholder-size" name="mensalidade">
+                                                <option value="basico">Mensal </option>
+                                                <option value="pro">Semestral (4% desconto)</option>
+                                                <option value="pro">Anual (7% desconto)</option>
+                                            </select>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+
+                            <!-- Modal footer -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-success" data-dismiss="modal">Cadastrar</button>
+                                <button type="button" class="btn btn-danger" data-dismiss="modal">Fechar</button>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- fim do modal de inserir aluno #################### -->
                 <div class="tab-content">
                     <div class="tab-pane active" id="alunos-todos" role="tabpanel">
                         <table class="table table-hover">
                             <tr>
-                                <th>Nome</th>
+                                <th class="ola">Nome</th>
                                 <th>Data de ínicio</th>
                                 <th>Última avaliação</th>
                                 <th></th>
                             </tr>
-                            <tr>
-                                <td>Cássio Jarek</td>
-                                <td>04/01/2019</td>
-                                <td>04/01/2019</td>
-                                <td><a class="btn btn-primary" href="Home/ProfVisualizaAluno" role="button">Visualizar</a></td>
-                            </tr>
-                            <tr>
-                                <td>Gabriel do Carmo</td>
-                                <td>15/11/2018</td>
-                                <td>01/02/2019</td>
+                            <tr th:each="alunos:${alunos}">
+                                <td class="ola"><span th:text="${alunos.nome}"> </span></td>
+                                <td><span th:text="${alunos.dataNascimento}"> </span></td>
+                                <td><span th:text="${alunos.dataNascimento}"> </span></td>
                                 <td><a class="btn btn-primary" href="ProfVisualizaAluno.html" role="button">Visualizar</a></td>
-                            </tr>
-                            <tr>
-                                <td>Lucas Budnieswki</td>
-                                <td>01/06/2018</td>
-                                <td>15/03/2019</td>
-                                <td><a class="btn btn-primary" href="ProfVisualizaAluno.html" role="button">Visualizar</a></td>
-                            </tr>
-                            <tr>
-                                <td>Matheus Aguilar</td>
-                                <td>04/01/2016</td>
-                                <td>01/03/2019</td>
-                               <td><a class="btn btn-primary" href="ProfVisualizaAluno.html" role="button">Visualizar</a></td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="tab-pane" id="alunos-sem-avaliacao" role="tabpanel">
-                        <table class="table table-hover">
-                            <tr>
-                                <th>Nome</th>
-                                <th>Data de ínicio</th>
-                                <th></th>
-                            </tr>
-                            <tr>
-                                <td>Cássio Jarek</td>
-                                <td>04/01/2019</td>
-                                <td><a class="btn btn-primary" href="aluno_interna.html" role="button">Avaliar</a></td>
-                            </tr>
-                            <tr>
-                                <td>Gabriel do Carmo</td>
-                                <td>15/11/2018</td>
-                                <td><a class="btn btn-primary" href="aluno_interna.html" role="button">Avaliar</a></td>
-                            </tr>
-                            <tr>
-                                <td>Lucas Budnieswki</td>
-                                <td>01/06/2018</td>
-                                <td><a class="btn btn-primary" href="aluno_interna.html" role="button">Avaliar</a></td>
-                            </tr>
-                            <tr>
-                                <td>Matheus Aguilar</td>
-                                <td>04/01/2016</td>
-                                <td><a class="btn btn-primary" href="aluno_interna.html" role="button">Avaliar</a></td>
                             </tr>
                         </table>
                     </div>
@@ -118,6 +159,10 @@
             <br />
             <br />
         </div>
-     </body>
-
+    </body>
 </html>
+<script type="text/javascript">
+    $(document).ready(function(){
+        $("#cpf").mask("999.999.999-99");
+    });
+</script>
