--- a/src/main/resources/templates/Fragments/header.html
+++ b/src/main/resources/templates/Fragments/header.html
@@ -8,9 +8,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
         <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
-        <script src="http://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-
-
-
-        
+        <script src="http://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script> 
+        <script type="text/javascript" src="js/jquery-1.2.6.pack.js"></script>
+        <script type="text/javascript" src="js/jquery.maskedinput-1.1.4.pack.js"></script>
 </head>
